[package]
name = "softnet-stat"
version = "1.0.0"
authors = ["Herman J. Radtke III <herman@hermanradtke.com>"]
description = "Parse the `/proc/net/softnet_stat` file into something more readable."
documentation = "https://github.com/hjr3/softnet-stat"
homepage = "https://github.com/hjr3/softnet-stat"
repository = "https://github.com/hjr3/softnet-stat"
readme = "README.md"
keywords = ["network", "monitor", "softnet"]
license = "GPL-3.0"

[dependencies]
nom = "1.2.4"
getopts = "0.2.14"
rustc-serialize = "0.3.21"
